--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
-  <link rel="stylesheet" href="../../bootstrap.min.css">
-  <link rel="stylesheet" href="../../bootstrap.min.js.map">
+  <!--Bootstrap CSS-->
+  <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="bootstrap/bootstrap.min.js.map">
 </head>
 <body>
   <div class="container">
@@ -37,6 +38,7 @@
       </div>
     </div>
     
+    <!-- You can remove these sample todos except for div#todos-->
     <div id="todos" class="row">
       <div class="col-lg-6">
         <div class="card card-body m-2">
@@ -56,9 +58,12 @@
     </div>
   </div>
 
-  <script src="../../jquery-3.5.1.min.js"></script>
-  <script src="../../bootstrap.min.js"></script>
-  <script src="../../bootstrap.min.js.map"></script>
+  <!--jQuery-->
+  <script src="jquery/jquery-3.5.1.min.js"></script>
+  <!--Boostrap JS-->
+  <script src="bootstrap/bootstrap.min.js"></script>
+  <script src="bootstrap/bootstrap.min.js.map"></script>
+  <!--Custom JS-->
   <script src="script.js"></script>
 </body>
 </html>
