Remove sample todos
- When there is no todos there will be 'You have no todos. Go get some rest!'
- That will be removed when there is todo.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!--Bootstrap CSS-->
   <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="bootstrap/bootstrap.min.js.map">
+  <!--Custom CSS-->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
@@ -38,22 +40,10 @@
       </div>
     </div>
     
-    <!-- You can remove these sample todos except for div#todos-->
+    <!-- Container for todos -->
     <div id="todos" class="row">
-      <div class="col-lg-6">
-        <div class="card card-body m-2">
-          Sample todo
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="card card-body m-2">
-          Sample todo
-        </div>
-      </div>
-      <div class="col-lg-6">
-        <div class="card card-body m-2">
-          Sample todo
-        </div>
+      <div id="noTodos" class="col">
+        <h3 class="text-center my-2">You have no todos. Go get some rest!</h3>
       </div>
     </div>
   </div>
