--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Todo App</title>
+  <title>Todo jQuery App</title>
   <!--Bootstrap CSS-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <!--Custom CSS-->
@@ -13,7 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <h1 class="display-4 my-5 text-center">Todo App</h1>
+        <h1 class="display-4 my-5 text-center">Todo jQuery App</h1>
       </div>
     </div>
   </div>
